--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -18,13 +18,18 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install sphinx darglint
+        pip install sphinx darglint pydocstyle
 
     - name: Generate documentation
       run: |
         sphinx-apidoc -o docs/ .
         sphinx-build -b html docs/ docs/_build
 
+    - name: Run pydocstyle
+      run: |
+          pydocstyle monte_carlo_pi.py
+
     - name: Check docstrings
       run: |
-        darglint .
+        darglint monte_carlo_pi.py
+
